# ConsoleGames

./: .gitignore
BlackJack/: CMakeLists.txt  card.cpp  card.h  cardtype.h  constants.h  deck.cpp  deck.h  gameLogic.cpp  gameLogic.h  main.cpp  player.cpp  player.h
Durak/: CMakeLists.txt  card.cpp  card.h  constants.h  deck.cpp  deck.h  game.h  humanPlayer.h  player.h  smartAI.cpp  smatrAI.h  stupidAI.cpp  stupidAI.h
